--- a/templates/datarobot-node-template.yaml
+++ b/templates/datarobot-node-template.yaml
@@ -33,7 +33,7 @@ Parameters:
     Type: String
     Description: DataRobot version to install
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})'
-    Default: 7.0.2
+    Default: 7.1.0
   InstallationBucket:
     Type: String
     Description: CloudFormation repository S3 bucket name
@@ -488,10 +488,8 @@ Resources:
                   # flag URL that AMI is complete
                   curl -X PUT -H 'Content-Type:' --data-binary '{"Status" : "SUCCESS","Reason" : "Configuration Complete","UniqueId" : "IDAMIDONE","Data" : "AMI Complete"}' "$AMI_SIGNAL"
 
-                  # shutdown this instance - not in a scaling group
-
-                  # put this back in for final version
-                  # sudo /usr/sbin/shutdown +120
+                  # shutdown this instance in 2 hours - let scaling group take over
+                  sudo /usr/sbin/shutdown +120
  
                 else
                   echo "Skipping nodes other than ModelingOnly"
