--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -37,10 +37,14 @@ Metadata:
           - DRS3InstallationBucket
           - DRS3CreateBucket
           - DRSignedURL
+      - Label:
+          default: DataRobot Front End Load Balancer Settings
+        Parameters:
           - DRHTTPSetting
           - DRZone
           - DRAppName
           - DRPredName
+          - DRLbCidr
       - Label:
           default: AWS Quick Start Configuration
         Parameters:
@@ -58,6 +62,8 @@ Metadata:
         default: Required if HTTPS - Please enter the domain name you want to use for the end user application server
       DRPredName:
         default: Required if HTTPS - Please enter the domain name you want to use for the prediction servers
+      DRLbCidr:
+        default: Required - Provide a Cidr range you want to be allowed for the front end application and prediction service
       PublicSubnet1ID:
         default: Public subnet 1 ID
       PublicSubnet2ID:
@@ -143,6 +149,12 @@ Parameters:
     Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.0/dockerized/DataRobot-RELEASE-7.1.0.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1624388349&Signature=jPylx228j%2FYS3kbtmjAt0f00dTs%3D"
     Type: String
     Description: Presigned URL to download software, must be sent by DataRobot
+  DRLbCidr:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]{1}|[1-2][0-8]{2}))$
+    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/0-28
+    Default: '0.0.0.0/0'
+    Description: CIDR block to allow access to front end application and prediction services
+    Type: String
   QSS3BucketName:
     AllowedPattern: '^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$'
     ConstraintDescription:
@@ -239,11 +251,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: AMIWaitCondition
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-autoscale-template.yaml
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-autoscale-template.yaml'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-autoscale.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-autoscale.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 120
       Parameters:
         PrivateSubnet1ID: !Ref PrivateSubnet1ID
@@ -266,7 +277,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TimeoutInMinutes: 10
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-securitygroup-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-securitygroup.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-securitygroup.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         MainStack: !Ref AWS::StackName
         VpcId: !Ref VPCID
@@ -277,7 +291,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TimeoutInMinutes: 15
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-iam-template.yaml
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-iam.template.yaml
       Parameters:
         MainStack: !Ref AWS::StackName
         S3Bucket: !Ref DRS3InstallationBucket
@@ -287,7 +301,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: AppPasswd
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-appnode-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-appnode.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-appnode.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 120
       Parameters:
         InstanceType: r5.2xlarge
@@ -297,7 +314,7 @@ Resources:
         LBPublicSubnet1ID: !Ref PublicSubnet1ID
         LBPublicSubnet2ID: !Ref PublicSubnet2ID
         LBVPCID: !Ref VPCID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         SSHKey: !Ref KeyPairName
         QSInstallationBucket: weswagner-quickstart-dr
@@ -313,6 +330,7 @@ Resources:
         ClusterType: "QuickStart"  
         StorageType: "s3bucket" 
         DRHTTPSetting: !Ref DRHTTPSetting
+        AdminPassword: !Sub '{{resolve:secretsmanager:${AppPasswd}::password}}'
         # Defaults
         DRVersion: !Ref DRVersion
         NodeVolumeSize: 60
@@ -337,7 +355,10 @@ Resources:
   DedicatedPredictionServerStack1:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -347,7 +368,7 @@ Resources:
         ServerName: DedicatedPredictionServer1
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: ' '
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -375,7 +396,10 @@ Resources:
   DedicatedPredictionServerStack2:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -385,7 +409,7 @@ Resources:
         ServerName: DedicatedPredictionServer2
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet2ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: ' '
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -413,7 +437,10 @@ Resources:
   ModelManagementStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -423,7 +450,7 @@ Resources:
         ServerName: ModelManagement
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: ' '
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -453,7 +480,10 @@ Resources:
   ModelingNode1Stack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -463,7 +493,7 @@ Resources:
         ServerName: ModelingNode1
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: ' '
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -492,7 +522,10 @@ Resources:
   ModelingNode2Stack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -502,7 +535,7 @@ Resources:
         ServerName: ModelingNode2
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet2ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: ' '
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -532,7 +565,10 @@ Resources:
   ModelingOnlyNodeStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -542,7 +578,7 @@ Resources:
         ServerName: ModelingOnly
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: !Join
           - ''
@@ -572,7 +608,10 @@ Resources:
   DataNodeStack1:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -582,7 +621,7 @@ Resources:
         ServerName: DataNode1
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: !Ref AMIWaitHandle
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -610,7 +649,10 @@ Resources:
   DataNodeStack2:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -620,7 +662,7 @@ Resources:
         ServerName: DataNode2
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet2ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: !Ref AMIWaitHandle
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -648,7 +690,10 @@ Resources:
   DataNodeStack3:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node-template.yaml
+      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -658,7 +703,7 @@ Resources:
         ServerName: DataNode3
         SSHKey: !Ref KeyPairName
         SubnetId: !Ref PrivateSubnet1ID
-        Encrypted: false
+        Encrypted: true
         EncryptionKey: ' '
         AmiSignalHandle: !Ref AMIWaitHandle
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -866,8 +911,6 @@ Resources:
       TTL: 900
       Type: CNAME
 
-      
-
 
   LBSG:
     Type: 'AWS::EC2::SecurityGroup'
@@ -879,11 +922,11 @@ Resources:
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp: '0.0.0.0/0'
+          CidrIp: !Ref DRLbCidr
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-          CidrIp: '0.0.0.0/0'
+          CidrIp: !Ref DRLbCidr
 
   AppPasswd:
     Type: 'AWS::SecretsManager::Secret'
@@ -894,7 +937,7 @@ Resources:
         SecretStringTemplate: '{"username": "localadmin@datarobot.com"}'
         GenerateStringKey: "password"
         PasswordLength: 16
-        ExcludeCharacters: '"@/\'
+        ExcludePunctuation: true
 
 
 
