--- a/templates/datarobot-new-vpc-entry.template.yaml
+++ b/templates/datarobot-new-vpc-entry.template.yaml
@@ -41,16 +41,20 @@ Metadata:
       - KeyPairName
       - BastionAMIOS
       - BastionInstanceType
-    - Label:
-        default: DataRobot Install Parameters 
+      - Label:
+          default: DataRobot Install Parameters
         Parameters:
           - DRS3InstallationBucket
           - DRS3CreateBucket
           - DRSignedURL
+      - Label:
+          default: DataRobot Front End Load Balancer Settings
+        Parameters:
           - DRHTTPSetting
           - DRZone
           - DRAppName
           - DRPredName
+          - DRLbCidr
     - Label:
         default: AWS Quick Start configuration
       Parameters:
@@ -74,6 +78,8 @@ Metadata:
         default: Required if HTTPS - Please enter the domain name you want to use for the end user application server
       DRSignedURL:
         default: Signed URL Provided from the email sent to you by DataRobot
+      DRLbCidr:
+        default: Required - Provide a Cidr range you want to be allowed for the front end application and prediction service
       KeyPairName:
         default: Key pair name
       PrivateSubnet1CIDR:
@@ -163,6 +169,12 @@ Parameters:
     Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.0/dockerized/DataRobot-RELEASE-7.1.0.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1624388349&Signature=jPylx228j%2FYS3kbtmjAt0f00dTs%3D"
     Type: String
     Description: Presigned URL to download software, must be sent by DataRobot
+  DRLbCidr:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]{1}|[1-2][0-8]{2}))$
+    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/0-28
+    Default: '0.0.0.0/0'
+    Description: CIDR block to allow access to front end application and prediction services
+    Type: String
   KeyPairName:
     Description: Name of an existing public/private key pair, which allows you
       to securely connect to your instance after it launches.
@@ -235,11 +247,11 @@ Resources:
   VPCStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      # TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml
-      TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
-        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: https://aws-quickstart.s3.amazonaws.com/quickstart-aws-vpc/templates/aws-vpc.template.yaml
+      #TemplateURL: !Sub
+      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
+      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         AvailabilityZones:
           Fn::Join:
@@ -259,11 +271,11 @@ Resources:
   BastionStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      # TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-linux-bastion/templates/linux-bastion.template
-      TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-linux-bastion/templates/linux-bastion.template'
-        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: https://aws-quickstart.s3.amazonaws.com/quickstart-linux-bastion/templates/linux-bastion.template
+      #TemplateURL: !Sub
+      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-linux-bastion/templates/linux-bastion.template'
+      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         QSS3BucketName: 
           Ref: QSS3BucketName
@@ -295,7 +307,7 @@ Resources:
   DataRobotStack:
     Type: AWS::CloudFormation::Stack
     Properties: 
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-main-template.yaml
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-existing-vpc-template.yaml
       #TemplateURL: !Sub
       #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-linux-bastion/templates/datarobot-main-template.yaml'
       #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
@@ -333,6 +345,8 @@ Resources:
           Ref: DRS3CreateBucket
         DRSignedURL:
           Ref: DRSignedURL
+        DRLbCidr:
+          Ref: DRLbCidr
         QSS3BucketName: 'weswagner-quickstart-dr'
           # Ref: QSS3BucketName
         QSS3BucketRegion: 'us-east-1'
