commit and push fixes

--- a/templates/datarobot-appnode.template.yaml
+++ b/templates/datarobot-appnode.template.yaml
@@ -683,6 +683,8 @@ Resources:
           Ebs:
             DeleteOnTermination: true
             VolumeType: gp3
+            Encrypted: !Ref Encrypted
+            KmsKeyId: !If [ "UseKey", !Ref "EncryptionKey", !Ref "AWS::NoValue" ]
             VolumeSize: !Ref NodeVolumeSize
         - DeviceName: /dev/sdb
           Ebs:
