--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -144,9 +144,9 @@ Parameters:
     Description: DataRobot version to install
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})'
     #Default: 7.0.2
-    Default: 7.1.0
+    Default: 7.1.1
   DRSignedURL:
-    Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.0/dockerized/DataRobot-RELEASE-7.1.0.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1624388349&Signature=jPylx228j%2FYS3kbtmjAt0f00dTs%3D"
+    Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.1/dockerized/DataRobot-RELEASE-7.1.1.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1625151313&Signature=7x8f84pbgllHchiiHm7mZg3h0CI%3D"
     Type: String
     Description: Presigned URL to download software, must be sent by DataRobot
   DRLbCidr:
@@ -161,7 +161,7 @@ Parameters:
       The Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a 
       hyphen (-).
-    Default: weswagner-quickstart-dr
+    Default: dr-temp-wesquickstart-code
     Description:
       Name of the S3 bucket for your copy of the Quick Start assets. 
       Keep the default name unless you are customizing the template. 
@@ -187,7 +187,7 @@ Parameters:
       a forward slash. See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html 
       and https://aws-quickstart.github.io/option1.html.
   QSS3BucketRegion:
-    Default: 'us-east-1'
+    Default: 'us-west-2'
     Description: 'AWS Region where the Quick Start S3 bucket (QSS3BucketName) is 
       hosted. Keep the default Region unless you are customizing the template. 
       Changing this Region updates code references to point to a new Quick Start location. 
@@ -251,10 +251,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: AMIWaitCondition
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-autoscale.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-autoscale.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-autoscale.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 120
       Parameters:
         PrivateSubnet1ID: !Ref PrivateSubnet1ID
@@ -277,10 +277,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TimeoutInMinutes: 10
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-securitygroup.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-securitygroup.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-securitygroup.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         MainStack: !Ref AWS::StackName
         VpcId: !Ref VPCID
@@ -291,7 +291,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TimeoutInMinutes: 15
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-iam.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-data-robot-automl-platform/templates/datarobot-iam.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         MainStack: !Ref AWS::StackName
         S3Bucket: !Ref DRS3InstallationBucket
@@ -301,10 +304,10 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: AppPasswd
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-appnode.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-appnode.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-appnode.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 120
       Parameters:
         InstanceType: r5.2xlarge
@@ -354,10 +357,10 @@ Resources:
   DedicatedPredictionServerStack1:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -394,10 +397,10 @@ Resources:
   DedicatedPredictionServerStack2:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -434,10 +437,10 @@ Resources:
   ModelManagementStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -476,10 +479,10 @@ Resources:
   ModelingNode1Stack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -517,10 +520,10 @@ Resources:
   ModelingNode2Stack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -559,10 +562,10 @@ Resources:
   ModelingOnlyNodeStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -601,10 +604,10 @@ Resources:
   DataNodeStack1:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -641,10 +644,10 @@ Resources:
   DataNodeStack2:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
@@ -681,10 +684,10 @@ Resources:
   DataNodeStack3:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      #TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-node.template.yaml
       TemplateURL: !Sub
-        - 'https://${S3Bucket}.s3.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
-        - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-node.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
